# sdl2-space-invaders

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_Image.cmake  FindSDL2_TTF.cmake
include/: IMAGE.H  alien.h  alien_shot.h  animated_entity.h  avatar.h  avatar_laser.h  collideable_entity.h  drawable_entity.h  entity.h  flying_saucer.h  game.h  image.h  ingame_state.h  movable_entity.h  play_player_state.h  player_context.h  plunger_shot.h  rolling_shot.h  scene.h  shield.h  squiggly_shot.h  state.h  text_entity.h  welcome_scene.h  welcome_state.h
src/: alien.cpp  alien_shot.cpp  animated_entity.cpp  avatar.cpp  avatar_laser.cpp  collideable_entity.cpp  drawable_entity.cpp  flying_saucer.cpp  game.cpp  image.cpp  ingame_state.cpp  main.cpp  movable_entity.cpp  play_player_state.cpp  player_context.cpp  plunger_shot.cpp  rolling_shot.cpp  scene.cpp  shield.cpp  squiggly_shot.cpp  text_entity.cpp  welcome_scene.cpp  welcome_state.cpp
